----------------------------------------------------------------------
 OmegaT 2.5.3 update 1
----------------------------------------------------------------------
   1 Enhancement
   0 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.5.3 update 1 vs. 2.5.3

   - The automatic save interval can now be set in Options > Save. 
It is defined in minutes and seconds. If a value lower than 10 seconds
is set, it is reset to 10 seconds.

----------------------------------------------------------------------
 OmegaT 2.5.3
----------------------------------------------------------------------
   3 Enhancements
   3 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.5.3 vs. 2.5.2 update 2

  Implemented requests:

  - (X)HTML filters: hide content of tags based on attributes
  http://sourceforge.net/support/tracker.php?aid=3513384

  - Capture variables in source filename to target mapping
  http://sourceforge.net/support/tracker.php?aid=3436954

  Other enhancements:

  - The Linux packages (OmegaT_xxx_Linux.tar.bz2 and OmegaT_xxx_Without_JRE.zip) 
have been improved. They now contain an installation script: linux-install.sh 
and a Kaptain script: omegat.kaptn. The OmegaT script in OmegaT_xxx_Without_JRE.zip
have been improved with the usage of REALOMEGATPATH, as was already the case in 
OmegaT_xxx_Linux.tar.bz2.
  
  Bug fixes:

  - After loading or reloading the project, the focus was on the Matches
pane rather than on the Editor

  - Empty translations were not working for XML filters (e.g., Word,
OpenOffice.org/LibreOffice, etc.). I.e., the source text was inserted
in the target document.

  - "Comment:" was displayed for all HTML segments, even when the 
segment was not an attribute, and therefore had no comments to 
display

  Localisation updates:

  - Italian localisation updated to 2.5.2 update 2 (UI)
