@@ -1264,6 +1264,7 @@ WF_OPTION_ALLOW_TRANS_EQ_TO_SRC=&Allow translation to be equal to source
 WF_OPTION_EXPORT__CURRENT_SEGMENT=Export the segment to text files
 WF_OPTION_GOTO_NEXT_UNTRANSLATED=&Go To Next Untranslated Segment stops when there is at least one \
     alternative translation
+WF_OPTION_CONVERT_NUMBERS=Attempt to convert &numbers when inserting a fuzzy match
 
 # org.omegat.gui.dialogs.ExternalTMXMatchesDialog.java
 EXT_TMX_TITLE=External TMX Options
